--- a/btre/requirements.txt
+++ b/btre/requirements.txt
@@ -1,8 +1,9 @@
-Django==3.0.8
-gunicorn==20.0.4
-Pillow==7.2.0
-psycopg2==2.8.5
-psycopg2-binary==2.8.5
-pytz==2020.1
 dj-database-url==0.4.2
+Django==2.2.10
+gunicorn==19.7.1
+postgres==2.2.1
+psycopg2==2.8.5
+pytz==2017.2
 whitenoise==3.3.0
+Pillow==7.2.0
+psycopg2-binary==2.8.5
